--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     I graduated from <strong>The Ohio State University</strong> with a
     Bachelor's degree in Computer Science & Engineering.
     <br>
-    I will attend <strong>Washington University in St.Louis</strong> for
+    I'm currently studying at <strong>Washington University in St.Louis</strong> for
     a Master of Science degree in Computer Science.
     <br>
     My favorite sports are basketball, football, and skiing.
